--- a/E-Commerce/E-Commerce/appsettings.json
+++ b/E-Commerce/E-Commerce/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=E-CommerceTeam;Integrated Security=True;Encrypt=False"
+  }
 }
